syntax = "proto3";

package kitchen;

import "inventory.proto";

service KitchenService {
  rpc ProcessOrder(RecipeID) returns (KitchenOrder) {}
  rpc GetOrders(Empty) returns (Orders) {}
  rpc GetRecipes(Empty) returns (RecipesList) {}
}

message Empty {}

message RecipeID {
  int32 id = 1;
}

message Recipe {
  int32 id = 1;
  string name = 2;
  repeated inventory.Product ingredients = 3;
}

message RecipesList {
  repeated Recipe recipes = 1;
}

message KitchenOrder {
  int32 id = 1;
  Recipe order = 2;
  string created_at = 3;
  string completed_at = 4;
}

message Orders {
  repeated KitchenOrder orders = 1;
}
